unpackaged/main/default/objects/Box_Integration_Service__e/Box_Integration_Service__e.object-meta.xml
<CustomObject>
    <label>Box Integration Service</label>
    <pluralLabel>Box Integration Services</pluralLabel>
</CustomObject>