unpackaged/main/default/objects/Box_Integration_Service__e/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <label>Actor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>