unpackaged/main/default/objects/Box_Integration_Service__e/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>