unpackaged/main/default/objects/Box_Integration_Service__e/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>CaseId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>