unpackaged/main/default/objects/Box_Integration_Service__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>CaseNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>