unpackaged/main/default/objects/Box_Integration_Service__e/fields/Filename__c.field-meta.xml
<CustomField>
    <fullName>Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>