unpackaged/main/default/objects/Box_Integration_Service__e/fields/Filepath__c.field-meta.xml
<CustomField>
    <fullName>Filepath__c</fullName>
    <label>Filepath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>