unpackaged/main/default/objects/Box_Integration_Service__e/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>